@@ -24,10 +24,6 @@ Enhancements for PPL 0.7
   and Polyhedron::obtain_sorted_generators*() and into the code that
   uses them directly.
 - The Powerset class implementation is poorly documented.
-- See for what reason we have neither
-  C_Polyhedron& C_Polyhedron::operator=(const NNC_Polyhedron& y)
-  nor
-  NNC_Polyhedron& NNC_Polyhedron::operator=(const C_Polyhedron& y).
 - Clearly explain, in the documentation, how (not) to use
   set_GMP_memory_allocation_functions().  More generally, explain how
   to have memory-guarded computations.
